deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-petclinic
  name: spring-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-petclinic
  template:
    metadata:
      labels:
        app: spring-petclinic
    spec:
      containers:
      - image: contrastsecuritydemo/spring-petclinic:1.5.1
        name: spring-petclinic
        ports: 
          - containerPort: 8080
