service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-petclinic
  name: spring-petclinic
spec:
  ports:
  - port: 8080
  selector:
    app: spring-petclinic
  type: LoadBalancer
